@@ -3,7 +3,11 @@
 JVM_OPTS=${JVM_OPTS:-}
 ARGS="${*}"
 
-GENERAL_OPTS="-jar app.jar \
+# Required by Apache Arrow (Netty memory backend) to access DirectByteBuffer on Java 9+
+# See https://github.com/apache/arrow-java/?tab=readme-ov-file#java-properties
+ARROW_OPTS="-Dio.netty.tryReflectionSetAccessible=true --add-opens=java.base/java.nio=ALL-UNNAMED"
+
+GENERAL_OPTS="$ARROW_OPTS -jar app.jar \
     --spring.profiles.active=docker \
     --referenceGenomeFilename=./reference_genomes.json \
     $ARGS"
